deploy/retrieveUnpackaged/objects/SfdcDevice__c.object
<CustomObject>
    <description>The devices that are associated to this opportunity.</description>
    <fields>
        <fullName>Batch_Fail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for one time to load failures into Incent.</description>
        <label>Batch Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fail_Description__c</fullName>
        <description>Denotes the description if the device failed reconcilliation.</description>
        <inlineHelpText>Shows the description for why the device failed reconcilliation.</inlineHelpText>
        <label>Fail Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reconcile_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the device passed the reconcilliation.</description>
        <inlineHelpText>Shows if the device passed the reconcilliation with Navision.</inlineHelpText>
        <label>Reconcile Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>data_center_name__c</fullName>
        <description>Denotes the Data Center the device will go into.</description>
        <inlineHelpText>This is the Data Center the device will be in.</inlineHelpText>
        <label>Data Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>device_number__c</fullName>
        <description>Denotes the device number from CORE.</description>
        <inlineHelpText>This is the device number from CORE.</inlineHelpText>
        <label>Device Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>device_status__c</fullName>
        <description>Denotes the status of the device.</description>
        <inlineHelpText>This is the status of the device.</inlineHelpText>
        <label>Device Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>due_to_customer__c</fullName>
        <description>Denotes the date the device is due to the customer.</description>
        <inlineHelpText>This is the date the device is due to the customer.</inlineHelpText>
        <label>Due to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mrr__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Denotes the line item price for the device.</description>
        <inlineHelpText>This is the line item price for the device.</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>offline_date__c</fullName>
        <description>Denotes the date the device went offline.</description>
        <inlineHelpText>This is the date the device went offline.</inlineHelpText>
        <label>Offline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>online_date__c</fullName>
        <description>Denotes the date the device went online.</description>
        <inlineHelpText>This is the date the device went online.</inlineHelpText>
        <label>Online Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <description>Denotes the opportunity associated to this device.</description>
        <inlineHelpText>This is the opportunity that is associated to the device.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SFDC Devices</relationshipLabel>
        <relationshipName>Device</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>platform_name__c</fullName>
        <description>Denotes the platform from CORE.</description>
        <inlineHelpText>This is the platform for the device from CORE.</inlineHelpText>
        <label>Platform</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>setup__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Denotes the setup fee for line item pricing.</description>
        <inlineHelpText>This is the setup fee for line item pricing.</inlineHelpText>
        <label>Setup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>status_number__c</fullName>
        <description>Denotes the status number for the device.</description>
        <inlineHelpText>This is the status number for the device.</inlineHelpText>
        <label>Status Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SFDC Device</label>
    <nameField>
        <label>SFDC Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>